<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCA796"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/article_subheading3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom3"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/article_subtitle3"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance"
                android:textColor="#fff"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/masker" />

            <TextView
                android:id="@+id/longText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/long_text3"
                android:textColor="#000"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/masker3" />

            <TextView
                android:id="@+id/longText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/long_text4"
                android:textColor="#000"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
